Home: Get Plan List API 수정
* 코드 정리
* 변수명 변경
* 출력값을 명세서와 동일하게 변경